[MINDEXER-199] Unify Search API backend transports (#331)
And provide simple Java11 implementation.

---

https://issues.apache.org/jira/browse/MINDEXER-199